--- a/index.html
+++ b/index.html
@@ -2,267 +2,228 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <title>ZenSite</title>
 
 <style>
-*{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
-}
-
+/* ===== RESET ===== */
+*{margin:0;padding:0;box-sizing:border-box}
+html,body{touch-action:manipulation}
 body{
-  font-family: 'Montserrat', system-ui, -apple-system, sans-serif;
+  font-family:'Montserrat',system-ui,-apple-system,sans-serif;
   background:
-    radial-gradient(900px 500px at 50% 10%, rgba(0,120,255,.25), transparent 60%),
-    radial-gradient(800px 600px at 20% 80%, rgba(0,255,150,.2), transparent 65%),
+    radial-gradient(900px 520px at 50% 10%, rgba(0,120,255,.26), transparent 62%),
+    radial-gradient(820px 620px at 20% 85%, rgba(0,255,170,.20), transparent 65%),
+    radial-gradient(820px 620px at 85% 85%, rgba(255,215,0,.14), transparent 65%),
     #050505;
   color:#fff;
   overflow-x:hidden;
 }
-html, body {
-  touch-action: manipulation;
-}
 
 /* ===== TOP BAR ===== */
 .topbar{
-  position:fixed;
-  top:0;
-  left:0;
-  width:100%;
-  padding:18px 6%;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  background:rgba(0,0,0,.45);
-  backdrop-filter:blur(14px);
-  z-index:1000;
+  position:fixed;top:0;left:0;width:100%;
+  padding:16px 22px;
+  background:rgba(5,5,5,.65);
+  backdrop-filter:blur(18px);
+  z-index:999;
+  border-bottom:1px solid rgba(255,255,255,.08);
 }
+.topbar-inner{
+  max-width:1100px;margin:auto;
+  display:flex;align-items:center;justify-content:space-between;
+}
+.nav-left a{
+  margin-right:16px;text-decoration:none;color:#fff;
+  font-weight:800;opacity:.85
+}
+.nav-left a:hover{opacity:1}
+.langs button{
+  border:none;background:transparent;color:#fff;
+  font-weight:900;opacity:.6;cursor:pointer;margin-left:10px
+}
+.langs .active{opacity:1}
 
-/* IDIOMA */
-.lang button{
-  background:none;
-  border:none;
-  color:#fff;
-  font-weight:800;
-  margin-right:14px;
-  opacity:.6;
-  cursor:pointer;
-}
-.lang button.active{
-  opacity:1;
-}
+/* ===== WRAP ===== */
+.wrap{max-width:1100px;margin:auto;padding:120px 22px 60px}
 
-/* MENU */
-.menu a{
-  margin-left:26px;
-  text-decoration:none;
-  color:#fff;
-  font-weight:800;
-  opacity:.85;
-}
-.menu a:hover{
-  opacity:1;
-}
-
-/* ===== HERO ===== */
-.hero{
-  min-height:100vh;
-  padding:160px 6% 120px;
-}
-
+/* ===== HERO (cinematic) ===== */
+.hero{padding:20px 0 40px}
 .hero h1{
-  font-size:clamp(42px,7vw,86px);
-  font-weight:900;
-  line-height:1.05;
-  text-shadow:0 20px 40px rgba(0,0,0,.6);
+  font-size:clamp(44px,6vw,84px);
+  font-weight:950;line-height:1.02;
+  letter-spacing:-1.3px;
+  text-shadow:0 22px 70px rgba(0,0,0,.9);
+  filter:blur(6px);opacity:0;
+  transform:translateY(18px);
+  animation:heroIn .9s ease forwards;
 }
-
-.hero h1 span{
-  color:#bbb;
+.hero h1 span{opacity:.55}
+@keyframes heroIn{
+  to{filter:blur(0);opacity:1;transform:none}
 }
-
 .hero p{
-  margin-top:28px;
-  max-width:640px;
-  font-size:clamp(16px,2.2vw,20px);
-  opacity:.9;
+  margin-top:18px;max-width:720px;
+  font-size:clamp(18px,2.2vw,22px);
+  opacity:.85
 }
-
-.hero p strong{
-  font-weight:900;
-}
-
-/* CTA */
-.cta{
-  margin-top:44px;
-}
-
+.cta{margin-top:26px}
 .cta a{
-  display:inline-block;
-  padding:20px 42px;
-  border-radius:18px;
-  background:#fff;
-  color:#000;
-  font-weight:900;
-  text-decoration:none;
-  font-size:18px;
-  box-shadow:0 25px 60px rgba(0,0,0,.5);
+  display:inline-block;padding:16px 26px;border-radius:18px;
+  background:#fff;color:#000;font-weight:900;text-decoration:none;
+  box-shadow:0 24px 70px rgba(0,0,0,.55)
 }
 
-/* ===== LAPTOP ===== */
-.laptop{
-  margin-top:120px;
-  display:flex;
-  justify-content:center;
+/* ===== LAPTOP (micro-parallax) ===== */
+.laptopCard{
+  margin-top:28px;border-radius:26px;overflow:hidden;
+  border:1px solid rgba(255,255,255,.10);
+  box-shadow:0 40px 120px rgba(0,0,0,.9);
+  transform:translateY(14px);
+}
+.laptopImg{width:100%;display:block;object-fit:cover}
+
+/* ===== SISTEMA Z (signature) ===== */
+.system-z{
+  margin:40px auto 0;text-align:center;
+  font-weight:900;letter-spacing:.3px;
+  font-size:clamp(18px,2.4vw,24px);
+  text-shadow:0 10px 40px rgba(0,0,0,.9)
+}
+.system-z strong{
+  display:inline-block;font-weight:950;letter-spacing:1px;
+  background:linear-gradient(120deg,#fff,#b7faff,#fff,#b7ffda,#fff);
+  background-size:300% 300%;
+  -webkit-background-clip:text;-webkit-text-fill-color:transparent;
+  animation:zGrad 6s ease infinite, zPulse 1.8s ease-in-out infinite;
+}
+@keyframes zGrad{
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
+}
+@keyframes zPulse{
+  0%{transform:scale(1)}
+  50%{transform:scale(1.03)}
+  100%{transform:scale(1)}
 }
 
-.laptop img{
-  max-width:100%;
-  width:820px;
-  filter:drop-shadow(0 40px 80px rgba(0,0,0,.85));
-  transform:translateY(0);
+/* ===== MANIFESTO (secuencial) ===== */
+.manifesto{
+  margin-top:14px;text-align:center;
+  display:flex;justify-content:center;gap:14px;
 }
+.manifesto span{
+  opacity:0;transform:translateY(8px);
+  animation:maniIn .6s ease forwards;
+}
+.manifesto span:nth-child(1){animation-delay:.2s}
+.manifesto span:nth-child(2){animation-delay:.4s}
+.manifesto span:nth-child(3){animation-delay:.6s}
+@keyframes maniIn{to{opacity:.85;transform:none}}
 
-/* ===== 15 OFF ===== */
-.offer{
-  margin:80px auto 0;
-  max-width:420px;
-  background:rgba(255,255,255,.08);
-  border:1px solid rgba(255,255,255,.18);
-  backdrop-filter:blur(16px);
-  border-radius:22px;
-  padding:28px;
-  text-align:center;
+/* ===== 15% OFF ===== */
+.off{
+  margin:50px auto;max-width:600px;
+  padding:26px;border-radius:26px;text-align:center;
+  background:linear-gradient(135deg,rgba(0,255,170,.22),rgba(0,120,255,.22));
+  box-shadow:0 30px 90px rgba(0,0,0,.9)
 }
-
-.offer strong{
-  font-size:26px;
-}
-
-.offer span{
-  display:block;
-  margin-top:8px;
-  opacity:.8;
-}
+.off h2{font-size:32px;font-weight:950}
+.off p{opacity:.9}
 
 /* ===== FOOTER ===== */
-footer{
-  margin-top:140px;
-  padding:40px 6%;
-  text-align:center;
-  opacity:.5;
-  font-size:14px;
-}
+footer{margin:70px 0 20px;text-align:center;opacity:.6}
 
-/* ===== MOBILE ===== */
-@media(max-width:768px){
-  .hero{
-    padding-top:140px;
-  }
-}
+/* ===== REVEAL ===== */
+.reveal{opacity:0;transform:translateY(20px);transition:.7s}
+.reveal.show{opacity:1;transform:none}
 </style>
 </head>
 
 <body>
 
-<!-- TOP BAR -->
-<header class="topbar">
+<!-- TOP -->
+<div class="topbar">
+  <div class="topbar-inner">
+    <div class="nav-left">
+      <a href="demo.html" data-es="Demo" data-en="Demo">Demo</a>
+      <a href="nosotros.html" data-es="Nosotros" data-en="About">Nosotros</a>
+    </div>
+    <div class="langs">
+      <button class="lang active" data-lang="es">ES</button>
+      <button class="lang" data-lang="en">EN</button>
+    </div>
+  </div>
+</div>
 
-  <!-- IZQUIERDA: IDIOMA -->
-  <div class="lang">
-    <button class="active" onclick="setLang('es')">ES</button>
-    <button onclick="setLang('en')">EN</button>
+<main class="wrap">
+
+  <section class="hero">
+    <h1 data-es="Lleva tu negocio <span>al siguiente nivel</span>"
+        data-en="Take your business <span>to the next level</span>">
+      Lleva tu negocio <span>al siguiente nivel</span>
+    </h1>
+    <p data-es="Diseñamos webs modernas, rápidas y pensadas para convertir."
+       data-en="We build modern, fast websites designed to convert.">
+      Diseñamos webs modernas, rápidas y pensadas para convertir.
+    </p>
+    <div class="cta">
+      <a href="planes.html" data-es="Ver planes" data-en="View plans">Ver planes</a>
+    </div>
+  </section>
+
+  <section class="laptopCard reveal">
+    <img class="laptopImg" src="background.jpg" alt="ZenSite preview">
+  </section>
+
+  <section class="system-z reveal"
+    data-es="No es solo una web. ZenSite es entrar al Sistema Z."
+    data-en="It’s not just a website. ZenSite is entering System Z.">
+    No es solo una web. <strong>Sistema Z</strong>
+  </section>
+
+  <div class="manifesto">
+    <span data-es="Diseño" data-en="Design">Diseño</span>
+    <span data-es="Velocidad" data-en="Speed">Velocidad</span>
+    <span data-es="Autoridad" data-en="Authority">Autoridad</span>
   </div>
 
-  <!-- DERECHA: MENU -->
-  <nav class="menu">
-    <a href="demo.html">Demo</a>
-    <a href="nosotros.html">Nosotros</a>
-  </nav>
-
-</header>
-
-<!-- HERO -->
-<section class="hero">
-
-  <h1 data-es="Lleva tu negocio<br>al <span>siguiente nivel</span>"
-      data-en="Take your business<br>to the <span>next level</span>">
-    Lleva tu negocio<br>al <span>siguiente nivel</span>
-  </h1>
-
-  <p data-es="Diseñamos webs modernas, rápidas y pensadas para convertir. <strong>No es solo diseño, es presencia digital real.</strong>"
-     data-en="We design modern, fast websites built to convert. <strong>Not just design, real digital presence.</strong>">
-    Diseñamos webs modernas, rápidas y pensadas para convertir.
-    <strong>No es solo diseño, es presencia digital real.</strong>
-  </p>
-
-  <div class="cta">
-    <a href="planes.html" data-es="Ver planes" data-en="View plans">Ver planes</a>
+  <div class="off reveal">
+    <h2>15% OFF</h2>
+    <p data-es="Solo por 30 días" data-en="Only for 30 days">Solo por 30 días</p>
   </div>
 
-  <!-- LAPTOP -->
-  <div class="laptop">
-    <img src="background.jpg" alt="ZenSite demo">
-  </div>
-
-  <!-- OFFER -->
-  <div class="offer">
-    <strong>15% OFF</strong>
-    <span>Solo por 30 días</span>
-  </div>
-
-</section>
+</main>
 
 <footer>
-  © ZenSite — Todos los derechos reservados
+  © 2025 ZenSite — Todos los derechos reservados
 </footer>
 
 <script>
-function setLang(lang){
-  document.querySelectorAll('[data-es]').forEach(el=>{
-    el.innerHTML = el.dataset[lang];
-  });
-  document.querySelectorAll('.lang button').forEach(b=>{
-    b.classList.remove('active');
-  });
-  document.querySelector('.lang button[onclick*="'+lang+'"]').classList.add('active');
-}
-</script>
-<!-- PAGE TRANSITION -->
-<div id="page-transition"></div>
+/* REVEAL */
+const obs=new IntersectionObserver(e=>{
+  e.forEach(i=>{if(i.isIntersecting){i.target.classList.add('show');obs.unobserve(i.target)}})
+},{threshold:.2});
+document.querySelectorAll('.reveal').forEach(el=>obs.observe(el));
 
-<style>
-#page-transition{
-  position:fixed;
-  inset:0;
-  background:#050505;
-  opacity:0;
-  pointer-events:none;
-  transition:opacity .35s ease;
-  z-index:9999;
+/* LANG */
+const langs=document.querySelectorAll('.lang');
+const texts=document.querySelectorAll('[data-es]');
+function setLang(l){
+  langs.forEach(b=>b.classList.toggle('active',b.dataset.lang===l));
+  texts.forEach(t=>t.innerHTML=t.dataset[l]);
 }
-#page-transition.active{
-  opacity:1;
-}
-</style>
+langs.forEach(b=>b.onclick=()=>setLang(b.dataset.lang));
+setLang('es');
 
-<script>
-document.querySelectorAll("a[href]").forEach(link=>{
-  const url = link.getAttribute("href");
-  if(url && !url.startsWith("#") && !url.startsWith("http")){
-    link.addEventListener("click", e=>{
-      e.preventDefault();
-      const t=document.getElementById("page-transition");
-      t.classList.add("active");
-      setTimeout(()=>window.location.href=url,350);
-    });
-  }
+/* MICRO PARALLAX */
+window.addEventListener('scroll',()=>{
+  const y=window.scrollY;
+  const lap=document.querySelector('.laptopCard');
+  if(lap) lap.style.transform=translateY(${14 - y*0.04}px);
 });
 </script>
 
 </body>
 </html>
-
-
