--- a/index.html
+++ b/index.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <title>ZenSite</title>
 
 <style>
 /* ===== RESET ===== */
-*{margin:0;padding:0;box-sizing:border-box}
-html,body{touch-action:manipulation}
+*{
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
+}
+
+html, body{
+  touch-action: manipulation;
+}
+
+/* ===== BODY ===== */
 body{
   font-family:'Montserrat',system-ui,-apple-system,sans-serif;
   background:
-    radial-gradient(900px 520px at 50% 10%, rgba(0,120,255,.26), transparent 62%),
-    radial-gradient(820px 620px at 20% 85%, rgba(0,255,170,.20), transparent 65%),
-    radial-gradient(820px 620px at 85% 85%, rgba(255,215,0,.14), transparent 65%),
+    radial-gradient(900px 500px at 50% 10%, rgba(0,120,255,.25), transparent 60%),
+    radial-gradient(800px 600px at 20% 85%, rgba(0,255,150,.22), transparent 65%),
     #050505;
   color:#fff;
   overflow-x:hidden;
@@ -22,207 +30,271 @@ body{
 
 /* ===== TOP BAR ===== */
 .topbar{
-  position:fixed;top:0;left:0;width:100%;
-  padding:16px 22px;
-  background:rgba(5,5,5,.65);
-  backdrop-filter:blur(18px);
-  z-index:999;
-  border-bottom:1px solid rgba(255,255,255,.08);
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height:64px;
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  padding:0 22px;
+  background:rgba(5,5,5,.55);
+  backdrop-filter:blur(14px);
+  z-index:1000;
 }
-.topbar-inner{
-  max-width:1100px;margin:auto;
-  display:flex;align-items:center;justify-content:space-between;
-}
-.nav-left a{
-  margin-right:16px;text-decoration:none;color:#fff;
-  font-weight:800;opacity:.85
-}
-.nav-left a:hover{opacity:1}
-.langs button{
-  border:none;background:transparent;color:#fff;
-  font-weight:900;opacity:.6;cursor:pointer;margin-left:10px
-}
-.langs .active{opacity:1}
 
-/* ===== WRAP ===== */
-.wrap{max-width:1100px;margin:auto;padding:120px 22px 60px}
+.nav-left a,
+.nav-right span{
+  color:#fff;
+  text-decoration:none;
+  margin-right:18px;
+  font-weight:700;
+  opacity:.85;
+}
 
-/* ===== HERO (cinematic) ===== */
-.hero{padding:20px 0 40px}
+.nav-left a:hover,
+.nav-right span:hover{
+  opacity:1;
+}
+
+.nav-right span{
+  cursor:pointer;
+}
+
+.nav-right .active{
+  opacity:1;
+}
+
+/* ===== HERO ===== */
+.hero{
+  min-height:100vh;
+  padding:140px 7% 100px;
+  position:relative;
+}
+
 .hero h1{
-  font-size:clamp(44px,6vw,84px);
-  font-weight:950;line-height:1.02;
-  letter-spacing:-1.3px;
-  text-shadow:0 22px 70px rgba(0,0,0,.9);
-  filter:blur(6px);opacity:0;
-  transform:translateY(18px);
-  animation:heroIn .9s ease forwards;
+  font-size:clamp(42px,7vw,82px);
+  font-weight:900;
+  line-height:1.05;
+  letter-spacing:-1px;
+  text-shadow:0 20px 60px rgba(0,0,0,.6);
 }
-.hero h1 span{opacity:.55}
-@keyframes heroIn{
-  to{filter:blur(0);opacity:1;transform:none}
+
+.hero h1 span{
+  color:#aaa;
 }
+
 .hero p{
-  margin-top:18px;max-width:720px;
-  font-size:clamp(18px,2.2vw,22px);
-  opacity:.85
-}
-.cta{margin-top:26px}
-.cta a{
-  display:inline-block;padding:16px 26px;border-radius:18px;
-  background:#fff;color:#000;font-weight:900;text-decoration:none;
-  box-shadow:0 24px 70px rgba(0,0,0,.55)
+  margin-top:22px;
+  max-width:520px;
+  font-size:18px;
+  opacity:.9;
 }
 
-/* ===== LAPTOP (micro-parallax) ===== */
-.laptopCard{
-  margin-top:28px;border-radius:26px;overflow:hidden;
-  border:1px solid rgba(255,255,255,.10);
-  box-shadow:0 40px 120px rgba(0,0,0,.9);
-  transform:translateY(14px);
+.hero .cta{
+  margin-top:40px;
 }
-.laptopImg{width:100%;display:block;object-fit:cover}
 
-/* ===== SISTEMA Z (signature) ===== */
+.hero .cta a{
+  display:inline-block;
+  padding:18px 34px;
+  border-radius:18px;
+  background:#fff;
+  color:#000;
+  font-weight:900;
+  text-decoration:none;
+  transition:.25s;
+}
+
+.hero .cta a:hover{
+  transform:scale(1.04);
+}
+
+/* ===== LAPTOP ===== */
+.laptop{
+  margin:90px auto 0;
+  max-width:900px;
+  animation:float 7s ease-in-out infinite;
+}
+
+.laptop img{
+  width:100%;
+  display:block;
+  filter:drop-shadow(0 40px 80px rgba(0,0,0,.7));
+}
+
+@keyframes float{
+  0%,100%{transform:translateY(0)}
+  50%{transform:translateY(-14px)}
+}
+
+/* ===== SISTEMA Z ===== */
 .system-z{
-  margin:40px auto 0;text-align:center;
-  font-weight:900;letter-spacing:.3px;
-  font-size:clamp(18px,2.4vw,24px);
-  text-shadow:0 10px 40px rgba(0,0,0,.9)
+  padding:120px 7% 80px;
+  text-align:center;
 }
-.system-z strong{
-  display:inline-block;font-weight:950;letter-spacing:1px;
-  background:linear-gradient(120deg,#fff,#b7faff,#fff,#b7ffda,#fff);
-  background-size:300% 300%;
-  -webkit-background-clip:text;-webkit-text-fill-color:transparent;
-  animation:zGrad 6s ease infinite, zPulse 1.8s ease-in-out infinite;
+
+.system-z h2{
+  font-size:clamp(34px,6vw,64px);
+  font-weight:900;
+  letter-spacing:-.5px;
+  margin-bottom:20px;
 }
-@keyframes zGrad{
-  0%{background-position:0% 50%}
-  50%{background-position:100% 50%}
-  100%{background-position:0% 50%}
+
+.system-z p{
+  font-size:18px;
+  opacity:.9;
 }
-@keyframes zPulse{
+
+/* Latido */
+.pulse{
+  animation:pulse 2.5s infinite;
+}
+
+@keyframes pulse{
   0%{transform:scale(1)}
-  50%{transform:scale(1.03)}
+  50%{transform:scale(1.04)}
   100%{transform:scale(1)}
 }
 
-/* ===== MANIFESTO (secuencial) ===== */
-.manifesto{
-  margin-top:14px;text-align:center;
-  display:flex;justify-content:center;gap:14px;
+/* ===== 15 OFF ===== */
+.offer{
+  max-width:520px;
+  margin:60px auto 0;
+  padding:36px;
+  border-radius:26px;
+  background:rgba(20,40,30,.6);
+  border:1px solid rgba(255,255,255,.15);
+  text-align:center;
+  backdrop-filter:blur(16px);
 }
-.manifesto span{
-  opacity:0;transform:translateY(8px);
-  animation:maniIn .6s ease forwards;
-}
-.manifesto span:nth-child(1){animation-delay:.2s}
-.manifesto span:nth-child(2){animation-delay:.4s}
-.manifesto span:nth-child(3){animation-delay:.6s}
-@keyframes maniIn{to{opacity:.85;transform:none}}
 
-/* ===== 15% OFF ===== */
-.off{
-  margin:50px auto;max-width:600px;
-  padding:26px;border-radius:26px;text-align:center;
-  background:linear-gradient(135deg,rgba(0,255,170,.22),rgba(0,120,255,.22));
-  box-shadow:0 30px 90px rgba(0,0,0,.9)
+.offer h3{
+  font-size:36px;
+  font-weight:900;
 }
-.off h2{font-size:32px;font-weight:950}
-.off p{opacity:.9}
+
+.offer p{
+  margin-top:10px;
+  opacity:.85;
+}
 
 /* ===== FOOTER ===== */
-footer{margin:70px 0 20px;text-align:center;opacity:.6}
+footer{
+  margin-top:120px;
+  padding:30px 0;
+  text-align:center;
+  opacity:.6;
+  font-size:14px;
+}
 
 /* ===== REVEAL ===== */
-.reveal{opacity:0;transform:translateY(20px);transition:.7s}
-.reveal.show{opacity:1;transform:none}
+.reveal{
+  opacity:0;
+  transform:translateY(30px);
+  transition:1s;
+}
+
+.reveal.show{
+  opacity:1;
+  transform:none;
+}
+
+/* ===== MOBILE ===== */
+@media(max-width:768px){
+  .hero{
+    padding-top:120px;
+  }
+}
 </style>
 </head>
 
 <body>
 
-<!-- TOP -->
+<!-- ===== TOP BAR ===== -->
 <div class="topbar">
-  <div class="topbar-inner">
-    <div class="nav-left">
-      <a href="demo.html" data-es="Demo" data-en="Demo">Demo</a>
-      <a href="nosotros.html" data-es="Nosotros" data-en="About">Nosotros</a>
-    </div>
-    <div class="langs">
-      <button class="lang active" data-lang="es">ES</button>
-      <button class="lang" data-lang="en">EN</button>
-    </div>
+  <div class="nav-left">
+    <a href="demo.html" data-es="Demo" data-en="Demo">Demo</a>
+    <a href="nosotros.html" data-es="Nosotros" data-en="About">Nosotros</a>
+  </div>
+  <div class="nav-right">
+    <span class="lang active" data-lang="es">ES</span>
+    <span class="lang" data-lang="en">EN</span>
   </div>
 </div>
 
-<main class="wrap">
+<!-- ===== HERO ===== -->
+<section class="hero">
+  <h1 class="reveal">
+    <span data-es="Lleva tu negocio al" data-en="Take your business to the">Lleva tu negocio al</span><br>
+    <strong data-es="siguiente nivel" data-en="next level">siguiente nivel</strong>
+  </h1>
 
-  <section class="hero">
-    <h1 data-es="Lleva tu negocio <span>al siguiente nivel</span>"
-        data-en="Take your business <span>to the next level</span>">
-      Lleva tu negocio <span>al siguiente nivel</span>
-    </h1>
-    <p data-es="Diseñamos webs modernas, rápidas y pensadas para convertir."
-       data-en="We build modern, fast websites designed to convert.">
-      Diseñamos webs modernas, rápidas y pensadas para convertir.
-    </p>
-    <div class="cta">
-      <a href="planes.html" data-es="Ver planes" data-en="View plans">Ver planes</a>
-    </div>
-  </section>
+  <p class="reveal"
+     data-es="Diseñamos webs modernas, rápidas y pensadas para convertir."
+     data-en="We design modern, fast websites built to convert.">
+     Diseñamos webs modernas, rápidas y pensadas para convertir.
+  </p>
 
-  <section class="laptopCard reveal">
-    <img class="laptopImg" src="background.jpg" alt="ZenSite preview">
-  </section>
-
-  <section class="system-z reveal"
-    data-es="No es solo una web. ZenSite es entrar al Sistema Z."
-    data-en="It’s not just a website. ZenSite is entering System Z.">
-    No es solo una web. <strong>Sistema Z</strong>
-  </section>
-
-  <div class="manifesto">
-    <span data-es="Diseño" data-en="Design">Diseño</span>
-    <span data-es="Velocidad" data-en="Speed">Velocidad</span>
-    <span data-es="Autoridad" data-en="Authority">Autoridad</span>
+  <div class="cta reveal">
+    <a href="planes.html" data-es="Ver planes" data-en="View plans">Ver planes</a>
   </div>
 
-  <div class="off reveal">
-    <h2>15% OFF</h2>
+  <div class="laptop reveal">
+    <img src="background.jpg" alt="ZenSite demo">
+  </div>
+</section>
+
+<!-- ===== SISTEMA Z ===== -->
+<section class="system-z">
+  <h2 class="pulse reveal"
+      data-es="ZenSite no es solo una web"
+      data-en="ZenSite is not just a website">
+      ZenSite no es solo una web
+  </h2>
+
+  <p class="reveal"
+     data-es="Es la entrada al Sistema Z. Diseño, velocidad y autoridad en un solo ecosistema."
+     data-en="It’s your entry to System Z. Design, speed and authority in one ecosystem.">
+     Es la entrada al Sistema Z. Diseño, velocidad y autoridad en un solo ecosistema.
+  </p>
+
+  <div class="offer reveal">
+    <h3>15% OFF</h3>
     <p data-es="Solo por 30 días" data-en="Only for 30 days">Solo por 30 días</p>
   </div>
+</section>
 
-</main>
-
+<!-- ===== FOOTER ===== -->
 <footer>
   © 2025 ZenSite — Todos los derechos reservados
 </footer>
 
 <script>
-/* REVEAL */
-const obs=new IntersectionObserver(e=>{
-  e.forEach(i=>{if(i.isIntersecting){i.target.classList.add('show');obs.unobserve(i.target)}})
+/* ===== REVEAL ON SCROLL ===== */
+const revealEls=document.querySelectorAll('.reveal');
+const obs=new IntersectionObserver(entries=>{
+  entries.forEach(e=>{
+    if(e.isIntersecting){
+      e.target.classList.add('show');
+      obs.unobserve(e.target);
+    }
+  });
 },{threshold:.2});
-document.querySelectorAll('.reveal').forEach(el=>obs.observe(el));
+revealEls.forEach(el=>obs.observe(el));
 
-/* LANG */
-const langs=document.querySelectorAll('.lang');
+/* ===== LANG ===== */
+const langBtns=document.querySelectorAll('.lang');
 const texts=document.querySelectorAll('[data-es]');
-function setLang(l){
-  langs.forEach(b=>b.classList.toggle('active',b.dataset.lang===l));
-  texts.forEach(t=>t.innerHTML=t.dataset[l]);
-}
-langs.forEach(b=>b.onclick=()=>setLang(b.dataset.lang));
-setLang('es');
 
-/* MICRO PARALLAX */
-window.addEventListener('scroll',()=>{
-  const y=window.scrollY;
-  const lap=document.querySelector('.laptopCard');
-  if(lap) lap.style.transform=translateY(${14 - y*0.04}px);
-});
+function setLang(l){
+  langBtns.forEach(b=>b.classList.toggle('active',b.dataset.lang===l));
+  texts.forEach(t=>t.textContent=t.dataset[l]);
+}
+
+langBtns.forEach(b=>b.onclick=()=>setLang(b.dataset.lang));
+setLang('es');
 </script>
 
 </body>
