--- a/demo.html
+++ b/demo.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>ZenSite | Demo</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>ZenSite — Premium Demo</title>
 
 <style>
 :root{
   --bg:#050505;
-  --line:rgba(255,255,255,.10);
-  --glass:rgba(20,20,20,.82);
-  --muted:rgba(255,255,255,.78);
+  --line:rgba(255,255,255,.12);
+  --glass:rgba(20,20,20,.78);
+  --muted:rgba(255,255,255,.75);
   --muted2:rgba(255,255,255,.55);
   --r:26px;
 }
@@ -18,83 +18,61 @@
 *{margin:0;padding:0;box-sizing:border-box}
 body{
   font-family: system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
-  background:var(--bg);
+  background:radial-gradient(800px 400px at 50% 0%, rgba(0,140,255,.25), transparent 60%), var(--bg);
   color:#fff;
   overflow-x:hidden;
 }
 
-/* ===== HEADER ===== */
+/* ================= HEADER ================= */
 .header{
-  position:fixed;
-  top:0;left:0;width:100%;
+  position:fixed; top:0; left:0; width:100%;
   padding:18px 22px;
-  display:flex;
-  justify-content:space-between;
-  background:linear-gradient(to bottom, rgba(0,0,0,.9), transparent);
+  display:flex; justify-content:space-between; align-items:center;
+  background:linear-gradient(to bottom, rgba(0,0,0,.85), rgba(0,0,0,.25), transparent);
   z-index:1000;
 }
-.back{
-  color:#fff;
-  text-decoration:none;
+.brand{
   font-size:22px;
   font-weight:900;
+  letter-spacing:.5px;
 }
 .langs span{
   cursor:pointer;
-  font-weight:900;
-  margin-left:12px;
+  font-weight:800;
   opacity:.55;
+  margin-left:14px;
 }
 .langs span.active{opacity:1}
 
-/* ===== HERO ===== */
+/* ================= HERO ================= */
 .hero{
-  padding:140px 8% 90px;
+  padding:150px 8% 100px;
 }
 .hero h1{
   font-size:clamp(42px,6vw,74px);
   font-weight:950;
+  line-height:1.02;
 }
 .hero p{
-  margin-top:16px;
+  margin-top:20px;
+  max-width:820px;
   font-size:18px;
   color:var(--muted);
 }
 
-/* ===== FILTERS ===== */
-.filters{
-  margin-top:30px;
-  display:flex;
-  gap:10px;
-  flex-wrap:wrap;
-}
-.pill{
-  padding:10px 16px;
-  border-radius:999px;
-  border:1px solid rgba(255,255,255,.18);
-  background:rgba(0,0,0,.4);
-  color:#fff;
-  font-weight:900;
-  cursor:pointer;
-  opacity:.75;
-}
-.pill.active{
-  background:#fff;
-  color:#000;
-  opacity:1;
-}
-
-/* ===== SLIDER ===== */
+/* ================= SLIDER ================= */
 .slider{
   margin:70px auto 0;
   max-width:1200px;
-  overflow:hidden;
   border-radius:var(--r);
+  overflow:hidden;
   border:1px solid var(--line);
+  background:#000;
+  box-shadow:0 40px 120px rgba(0,0,0,.75);
 }
 .track{
   display:flex;
-  transition:transform .6s cubic-bezier(.2,.9,.2,1);
+  transition:transform .7s cubic-bezier(.2,.9,.2,1);
 }
 .slide{
   min-width:100%;
@@ -102,50 +80,30 @@ body{
 }
 .slide img{
   width:100%;
-  height:clamp(320px,52vh,520px);
+  height:520px;
   object-fit:cover;
+  filter:contrast(1.05) saturate(1.05);
+  transition:transform .6s ease;
 }
+.slide:hover img{transform:scale(1.04)}
 .tag{
-  position:absolute;
-  top:16px;left:16px;
+  position:absolute; top:16px; left:16px;
   background:rgba(0,0,0,.6);
+  border:1px solid rgba(255,255,255,.25);
   padding:8px 14px;
   border-radius:999px;
   font-weight:900;
-  font-size:13px;
 }
 .hint{
-  position:absolute;
-  top:16px;right:16px;
-  background:rgba(0,0,0,.6);
-  padding:8px 14px;
-  border-radius:999px;
+  position:absolute; top:16px; right:16px;
   font-size:12px;
+  opacity:.75;
 }
 
-/* ===== DOTS ===== */
-.dots{
-  position:absolute;
-  bottom:14px;
-  left:50%;
-  transform:translateX(-50%);
-  display:flex;
-  gap:10px;
-}
-.dot{
-  width:10px;height:10px;
-  border-radius:50%;
-  background:rgba(255,255,255,.35);
-  cursor:pointer;
-}
-.dot.active{
-  background:#fff;
-  transform:scale(1.2);
-}
-
-/* ===== STATS ===== */
+/* ================= STATS ================= */
 .stats{
-  margin-top:70px;
+  margin:90px auto 0;
+  max-width:1200px;
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
   gap:20px;
@@ -154,8 +112,9 @@ body{
   background:var(--glass);
   border:1px solid var(--line);
   border-radius:22px;
-  padding:32px;
+  padding:34px 18px;
   text-align:center;
+  backdrop-filter:blur(14px);
 }
 .stat strong{
   font-size:46px;
@@ -168,170 +127,146 @@ body{
   font-weight:900;
 }
 
-/* ===== FOOTER ===== */
+/* ================= ELITE ================= */
+.elite{
+  margin:120px auto 0;
+  max-width:900px;
+  text-align:center;
+}
+.elite h2{
+  font-size:34px;
+  font-weight:900;
+}
+.elite p{
+  margin-top:18px;
+  font-size:18px;
+  color:var(--muted);
+}
+
+/* ================= FOOTER ================= */
 footer{
-  margin-top:90px;
+  margin-top:120px;
   padding:28px;
   text-align:center;
   font-size:13px;
   opacity:.55;
 }
 
-/* ===== DEMO MODE BAR ===== */
-.demo-mode{
+/* ================= FLOATING DEMOS ================= */
+.floats{
   position:fixed;
-  top:90px;
-  left:50%;
-  transform:translateX(-50%);
-  padding:10px 18px;
-  background:rgba(0,0,0,.65);
-  border:1px solid rgba(255,255,255,.18);
-  border-radius:999px;
-  font-size:12px;
-  opacity:.75;
-  z-index:1200;
-  backdrop-filter:blur(12px);
-}
-
-/* ===== FLOATING DEMO DOCK ===== */
-.demo-float{
-  position:fixed;
-  bottom:26px;
+  bottom:22px;
   left:50%;
   transform:translateX(-50%);
   display:flex;
-  gap:14px;
-  background:rgba(0,0,0,.65);
-  border:1px solid rgba(255,255,255,.18);
-  backdrop-filter:blur(16px);
+  gap:12px;
+  z-index:9999;
+}
+.float{
   padding:14px 18px;
   border-radius:999px;
-  z-index:1300;
-}
-
-.demo-btn{
-  position:relative;
-  padding:12px 18px;
-  border-radius:999px;
-  background:rgba(255,255,255,.08);
-  border:1px solid rgba(255,255,255,.18);
-  color:#fff;
+  border:1px solid rgba(255,255,255,.25);
+  background:rgba(0,0,0,.75);
+  backdrop-filter:blur(14px);
   font-weight:900;
-  font-size:13px;
   cursor:pointer;
-  overflow:hidden;
   transition:.25s ease;
+  white-space:nowrap;
 }
-.demo-btn:hover{
+.float:hover{
   background:#fff;
   color:#000;
-  box-shadow:0 10px 40px rgba(255,255,255,.45);
-}
-.demo-btn::after{
-  content:"";
-  position:absolute;
-  inset:0;
-  background:linear-gradient(120deg, transparent, rgba(255,255,255,.5), transparent);
-  transform:translateX(-120%);
-  transition:.6s ease;
-}
-.demo-btn:hover::after{
-  transform:translateX(120%);
+  transform:translateY(-2px);
+  box-shadow:0 20px 40px rgba(255,255,255,.25);
 }
 
-/* RIPPLE */
-.demo-btn span{
-  position:absolute;
-  border-radius:50%;
-  transform:scale(0);
-  animation:ripple .6s linear;
-  background:rgba(255,255,255,.5);
+/* ================= SMOKE ================= */
+.smoke{
+  position:fixed;
+  inset:0;
+  pointer-events:none;
+  background:
+    radial-gradient(500px 300px at 20% 20%, rgba(255,255,255,.04), transparent 70%),
+    radial-gradient(500px 300px at 80% 80%, rgba(255,255,255,.03), transparent 70%);
+  animation:drift 16s ease-in-out infinite alternate;
 }
-@keyframes ripple{
-  to{transform:scale(4);opacity:0}
+@keyframes drift{
+  from{transform:translateY(0)}
+  to{transform:translateY(-20px)}
 }
 </style>
 </head>
 
 <body>
 
+<div class="smoke"></div>
+
 <header class="header">
-  <a class="back" href="#">ZenSite</a>
+  <div class="brand">ZenSite</div>
   <div class="langs">
     <span class="active">ES</span>
     <span>EN</span>
   </div>
 </header>
 
-<div class="demo-mode">Estás explorando demos reales · Toca y navega</div>
-
 <section class="hero">
-  <h1>Galería de demos</h1>
-  <p>Explora ejemplos reales de landing pages, sitios web y tiendas online.</p>
-
-  <div class="filters">
-    <button class="pill active">Todos</button>
-    <button class="pill">Landing</button>
-    <button class="pill">Web</button>
-    <button class="pill">Tienda</button>
-  </div>
+  <h1>Esto no es una web.<br>Es presencia digital.</h1>
+  <p>
+    Demos reales de sitios premium diseñados para vender,
+    generar confianza y diferenciar negocios serios.
+  </p>
 
   <div class="slider">
-    <div class="track">
-      <div class="slide">
-        <span class="tag">Landing</span><span class="hint">Toca</span>
-        <img src="demo1.jpg">
-      </div>
-      <div class="slide">
-        <span class="tag">Web</span><span class="hint">Toca</span>
-        <img src="demo2.jpg">
-      </div>
-      <div class="slide">
-        <span class="tag">Store</span><span class="hint">Toca</span>
-        <img src="demo3.jpg">
-      </div>
-    </div>
-    <div class="dots">
-      <div class="dot active"></div>
-      <div class="dot"></div>
-      <div class="dot"></div>
+    <div class="track" id="track">
+      <div class="slide"><span class="tag">Landing</span><span class="hint">Toca</span><img src="demo1.jpg"></div>
+      <div class="slide"><span class="tag">Web</span><span class="hint">Toca</span><img src="demo2.jpg"></div>
+      <div class="slide"><span class="tag">Store</span><span class="hint">Toca</span><img src="demo3.jpg"></div>
     </div>
   </div>
 
   <div class="stats">
-    <div class="stat"><strong>15</strong><span>Proyectos</span></div>
-    <div class="stat"><strong>2</strong><span>Países</span></div>
-    <div class="stat"><strong>98</strong><span>Satisfacción</span></div>
+    <div class="stat"><strong data-count="15">0</strong><span>Proyectos entregados</span></div>
+    <div class="stat"><strong data-count="98">0</strong><span>Satisfacción</span></div>
+    <div class="stat"><strong data-count="2">0</strong><span>Países</span></div>
+  </div>
+
+  <div class="elite">
+    <h2>Esto no es para todos</h2>
+    <p>
+      Trabajamos con negocios que quieren verse grandes,
+      vender más y diferenciarse.
+      Si buscas algo barato, este no es tu sitio.
+    </p>
   </div>
 </section>
 
-<footer>©️ 2025 ZenSite</footer>
+<footer>© 2025 ZenSite · Premium Digital Presence</footer>
 
-<!-- FLOATING DEMO BUTTONS -->
-<div class="demo-float">
-  <button class="demo-btn" onclick="go('https://olivahr.github.io/demohomepage-/')">Home Page</button>
-  <button class="demo-btn" onclick="go('https://olivahr.github.io/pruebamirandaflow/')">Store</button>
-  <button class="demo-btn" onclick="go('https://olivahr.github.io/demostore/')">Store 2</button>
-  <button class="demo-btn" onclick="go('https://olivahr.github.io/demobarberweb/')">Web</button>
+<!-- FLOAT BUTTONS -->
+<div class="floats">
+  <a class="float" href="https://olivahr.github.io/demohomepage-/" target="_blank">Home Page</a>
+  <a class="float" href="https://olivahr.github.io/pruebamirandaflow/" target="_blank">Store</a>
+  <a class="float" href="https://olivahr.github.io/demostore/" target="_blank">Store 2</a>
+  <a class="float" href="https://olivahr.github.io/demobarberweb/" target="_blank">Web</a>
 </div>
 
 <script>
-function go(url){
-  document.body.style.opacity=".4";
-  setTimeout(()=>window.location.href=url,300);
-}
+/* SLIDER */
+const track=document.getElementById("track");
+let i=0;
+setInterval(()=>{
+  i=(i+1)%track.children.length;
+  track.style.transform=`translateX(-${i*100}%)`;
+},4200);
 
-/* RIPPLE */
-document.querySelectorAll(".demo-btn").forEach(btn=>{
-  btn.addEventListener("click",function(e){
-    const c=document.createElement("span");
-    const d=Math.max(this.clientWidth,this.clientHeight);
-    c.style.width=c.style.height=d+"px";
-    c.style.left=e.offsetX-d/2+"px";
-    c.style.top=e.offsetY-d/2+"px";
-    this.appendChild(c);
-    setTimeout(()=>c.remove(),600);
-  });
+/* COUNTERS */
+document.querySelectorAll("[data-count]").forEach(el=>{
+  let n=0,target=+el.dataset.count;
+  const t=setInterval(()=>{
+    n++;
+    el.textContent=n;
+    if(n>=target)clearInterval(t);
+  },20);
 });
 </script>
 
